--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,81 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap");
+* {
   margin: 0;
+  padding: 0;
+  font-family: "Dm Serif Text", sans-serif, serif;
+}
+
+nav {
+  width: calc(100vw - 2rem);
+  padding: 1rem;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 2px solid black;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+nav .title-block h1 {
+  font-size: 1.6rem;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+nav .title-block h2 {
+  font-size: 1rem;
+  font-weight: 300;
+  margin-top: -0.4rem;
+  font-style: italic;
 }
-button:hover {
-  border-color: #646cff;
+nav .link-block {
+  padding-right: 2rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 0.5rem;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+nav .link-block .burger-btn, nav .link-block .burger-dropdown {
+  display: none;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+nav .link-block a {
+  text-decoration: none;
+}
+nav .link-block a h2 {
+  color: black;
+  font-size: 1.25rem;
+  text-decoration: none;
+  border-bottom: 2px solid black;
+}
+nav .link-block a h2:hover {
+  border-bottom-color: lightblue;
+}
+@media (max-width: 700px) {
+  nav .link-block a {
+    display: none;
   }
-  a:hover {
-    color: #747bff;
+  nav .link-block .burger-dropdown {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 0.5rem;
+    position: absolute;
+    left: 0.5rem;
+    top: 0.5rem;
+    padding: 1rem;
+    width: calc(100vw - 3rem);
+    background-color: black;
   }
-  button {
-    background-color: #f9f9f9;
+  nav .link-block .burger-dropdown button {
+    background-color: transparent;
+    border: none;
   }
-}
+  nav .link-block .burger-dropdown a {
+    display: block;
+  }
+  nav .link-block .burger-dropdown a h2 {
+    color: white;
+    border-bottom: 2px solid white;
+  }
+  nav .link-block .burger-btn {
+    display: block;
+    background-color: transparent;
+    border: none;
+  }
+}/*# sourceMappingURL=index.css.map */
