Added basic home page

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: "Dm Serif Text", sans-serif, serif;
+  font-family: "Source Serif 4", sans-serif, serif;
 }
 
 nav {
@@ -13,13 +14,14 @@ nav {
   justify-content: space-between;
   align-items: center;
   border-bottom: 2px solid black;
+  z-index: 4;
 }
 nav .title-block h1 {
   font-size: 1.6rem;
 }
 nav .title-block h2 {
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: 400;
   margin-top: -0.4rem;
   font-style: italic;
 }
@@ -50,6 +52,7 @@ nav .link-block a h2:hover {
     display: none;
   }
   nav .link-block .burger-dropdown {
+    z-index: 5;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -78,4 +81,74 @@ nav .link-block a h2:hover {
     background-color: transparent;
     border: none;
   }
+}
+
+body {
+  z-index: 1;
+}
+body div#root {
+  z-index: 2;
+}
+
+main.home {
+  z-index: 3;
+}
+main.home .image-header {
+  position: relative;
+  text-align: center;
+}
+main.home .image-header img {
+  width: 100vw;
+  max-height: 30vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main.home .image-header img.mobile {
+  display: none;
+}
+@media (max-width: 700px) {
+  main.home .image-header img.mobile {
+    display: block;
+  }
+  main.home .image-header img.desktop {
+    display: none;
+  }
+}
+main.home .image-header h1 {
+  color: white;
+  position: absolute;
+  top: calc(50% - 3.5vw);
+  width: 100vw;
+  font-size: 7vw;
+  height: 2.5rem;
+  transform: translate(0, -50%);
+  font-weight: 400;
+}
+main.home .image-header h1 em {
+  font-weight: 700;
+}
+main.home .introduction-contain {
+  padding-top: 1rem;
+}
+main.home .introduction-contain p {
+  width: 30rem;
+  max-width: 80vw;
+  font-size: 1.2rem;
+  margin: 0 auto;
+}
+main.home .introduction-contain h2 {
+  width: 30rem;
+  max-width: 80vw;
+  margin-left: calc(50vw - min(15rem, 40vw));
+  margin-top: 0.5rem;
+  font-size: 2rem;
+}
+main.home .introduction-contain .project-contain {
+  width: 30rem;
+  max-width: 80vw;
+  margin-left: calc(50vw - min(15rem, 40vw));
+  margin-top: 0.5rem;
+}
+main.home .introduction-contain .project-contain a {
+  color: orangered;
 }/*# sourceMappingURL=index.css.map */
