--- a/src/index.scss
+++ b/src/index.scss
@@ -97,14 +97,21 @@ body {
         z-index: 2;
     }
 }
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 main.home {
     z-index: 3;
     .image-header {
         position: relative;
         text-align: center;
+        width: 100vw;
         img {
             width: 100vw;
-            max-height: 30vh;
+            margin: 0;
+            padding: 0;
+            max-height: 15vw;
             object-fit: cover;
         }
         img.mobile {display:none;}
@@ -115,10 +122,10 @@ main.home {
         h1 {
             color:white;
             position:absolute;
-            top: calc(50% - 3.5vw);
+            top: calc(50% - 1.5vw);
             width: 100vw;
             font-size: 7vw;
-            height: 2.5rem;
+            height: 7.5vw;
             transform: translate(0, -50%);
             font-weight: 400;
 
@@ -131,6 +138,7 @@ main.home {
     
     .introduction-contain {
         padding-top: 1rem;
+        width: 100vw;
         p {
             width: 30rem;
             max-width: 80vw;
